force-app/main/default/objects/Quote/fields/crms11__ContractRenewalTermMonths__c.field-meta.xml
<CustomField>
    <fullName>crms11__ContractRenewalTermMonths__c</fullName>
    <label>Contract Renewal Term (months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>