force-app/main/default/objects/Quote/fields/crms11__Default_End_Date__c.field-meta.xml
<CustomField>
    <fullName>crms11__Default_End_Date__c</fullName>
    <label>Default End Date</label>
    <type>Date</type>
</CustomField>