force-app/main/default/objects/Quote/fields/crms11__FlexPricer_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>crms11__FlexPricer_Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FlexPricer Read Only</label>
    <type>Checkbox</type>
</CustomField>