force-app/main/default/objects/Quote/fields/crms11__Is_New_Quote__c.field-meta.xml
<CustomField>
    <fullName>crms11__Is_New_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_New_Quote</label>
    <type>Checkbox</type>
</CustomField>