force-app/main/default/objects/Quote/fields/crms11__Pricing_Partner__c.field-meta.xml
<CustomField>
    <fullName>crms11__Pricing_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>